--- a/configurations/example-overlay_config.json
+++ b/configurations/example-overlay_config.json
@@ -1,5 +1,5 @@
 {
-      "environment": "development",
+      "environment": "testnet",
       "scripts":{
         "node_name" : "*node name here*",
         "telegram_chat_id" : "*telegram chat id here*",
@@ -41,12 +41,12 @@
               "since" : "5m",
               "header" : "Timed out"
             },
-            "fatal_error_detection":{
+            "RPC_Downtime_detection":{
               "enabled" : "true",
               "telegram_bot_token" : "*telegram bot token here*",
-              "searchfor" : "'fatal'",
+              "searchfor" : "'Invalid JSON RPC response'",
               "since" : "5m",
-              "header" : "FATAL ERROR - ATTENTION REQUIRED"
+              "header" : "RPC connection failed to respond"
             },
             "low_eth_detection":{
               "enabled" : "true",
@@ -103,11 +103,6 @@
           "enabled" : "true",
           "telegram_bot_token" : "*telegram bot token here*",
           "frequency" : "0 0 1 * *"
-        },
-        "auto_system_updates":{
-          "enabled" : "false",
-          "telegram_bot_token" : "*telegram bot token here*",
-          "frequency" : "0 4 * * 0"
         },
         "aws_backup":{
           "enabled" : "true",
